# enigma2

lib/python/Plugins/SystemPlugins/: Makefile.am
lib/service/: servicedvb.cpp
